kubernetes/templates/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cocktail-virt
  labels:
    app: cocktail-virt
    cocktail-virt.io/version: { { .Values.tag } }
