kubernetes/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cocktail-virt
  namespace: cocktail-virt
  labels:
    app: cocktail-virt
    cocktail-virt.io/version: { { .Values.tag } }
spec:
  selector:
    matchLabels:
      app: cocktail-virt
      cocktail-virt.io/version: { { .Values.tag } }
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cocktail-virt
        cocktail-virt.io/version: { { .Values.tag } }
    spec:
      containers:
        - name: cocktail-virt
          image: { { .Values.docker_image } }
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 10000
            runAsGroup: 30000
          volumeMounts:
            - name: cache-volume
              mountPath: /var/cache/nginx
            - name: run-volume
              mountPath: /var/run
            - name: auth-config
              mountPath: /etc/nginx/auth.d/
            - name: auth-secret
              mountPath: /etc/nginx/secret.d/
            - name: prometheus-config
              mountPath: /etc/nginx/location.d/
      serviceAccountName: cocktail-virt
      restartPolicy: Always
      volumes:
        - name: cache-volume
          emptyDir: {}
        - name: run-volume
          emptyDir: {}
        - name: auth-config
          configMap:
            name: auth-config
            optional: true
        - name: auth-secret
          secret:
            secretName: auth-secret
            optional: true
        - name: prometheus-config
          configMap:
            name: prometheus-config
            optional: true
