kubernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cocktail-virt
  namespace: cocktail-virt
  labels:
    app: cocktail-virt
    cocktail-virt.io/version: { { .Values.tag } }
spec:
  type: ClusterIP
  selector:
    app: cocktail-virt
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
