kubernetes/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cocktail-virt
  namespace: cocktail-virt
  labels:
    app: cocktail-virt
    cocktail-virt.io/version: { { .Values.tag } }
  annotations:
    nginx.org/location-snippets: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection $connection_upgrade;
spec:
  ingressClassName: my-ingress-class
  tls:
    - hosts:
        - my-host.com
  rules:
    - host: my-host.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cocktail-virt
                port:
                  number: 8080
